--- a/index.html
+++ b/index.html
@@ -6,10 +6,24 @@
         <meta name="description" content="This page is a hub for different web pages made by Magnus Damsgaard Christiansen.">. 
         <meta name="author" content="Magnus D.C.">
     </title> 
-    
+    <script src="https://sdk.scdn.co/spotify-player.js"></script>
+    <script>
+    window.onSpotifyWebPlaybackSDKReady = () => {
+    const userAccessToken = "[access token]";
+    const webPlayback = new Spotify.Player({
+        name: "Spotify Web Playback SDK",
+        getOAuthToken: callback => { callback(userAccessToken)}
+    });
+    webPlayback.connect();
+    };
+    </script>
+    <style>
+
+    </style>
 </head>
 
 <body>
-    
+    <h1>This is a Heading</h1>
+    <p>This is a paragraph.</p>
 </body>
 </html>
