5 pages made for webpage

--- a/contact.html
+++ b/contact.html
@@ -2,8 +2,7 @@
 <html> 
 <head> 
     <title>
-        Magnus Home
-
+        Magnus Contact info
     </title> 
     <link rel="website icon" class="png" href="favicon.svg">
     <link rel="stylesheet" href="navbar.css">
@@ -16,12 +15,12 @@
 
     <div>
         <nav>
-            <a href="#">home</a>
+            <a href="C:\Users\magnu\OneDrive\AalborgDokumenter\GitHub\webpage\index.html">home</a>
             <a href="C:\Users\magnu\OneDrive\AalborgDokumenter\GitHub\webpage\github_page.html">github</a>
             <a href="C:\Users\magnu\OneDrive\AalborgDokumenter\GitHub\webpage\damsgaard.html">damsgaard</a>
             <a href="C:\Users\magnu\OneDrive\AalborgDokumenter\GitHub\webpage\projects.html">projects</a>
-            <a href="C:\Users\magnu\OneDrive\AalborgDokumenter\GitHub\webpage\contact.html">contact</a>
-            <div class="animation start-home"></div>
+            <a href="#">contact</a>
+            <div class="animation start-contact"></div>
         </nav>
     </div>
 
