--- a/damsgaard.html
+++ b/damsgaard.html
@@ -2,28 +2,36 @@
 <html> 
 <head> 
     <title>
-        Magnus Home
-
+        Magnus Damsgaard.dk
     </title> 
-    <link rel="website icon" class="png" href="favicon.svg">
+    <link rel="icon" class="svg" href="favicon.svg">
     <link rel="stylesheet" href="navbar.css">
     <link rel="stylesheet" href="search_bar.css">
+    <link rel="stylesheet" href="damsgaard.css">
+
+    <style>
+        body {overflow: hidden;}
+    </style>
+
 </head>
 
 <body>
-
+<div scrolling="no">
     <input class="search">
 
     <div>
         <nav>
-            <a href="#">home</a>
+            <a href="C:\Users\magnu\OneDrive\AalborgDokumenter\GitHub\webpage\index.html">home</a>
             <a href="C:\Users\magnu\OneDrive\AalborgDokumenter\GitHub\webpage\github_page.html">github</a>
-            <a href="C:\Users\magnu\OneDrive\AalborgDokumenter\GitHub\webpage\damsgaard.html">damsgaard</a>
+            <a href="#">damsgaard</a>
             <a href="C:\Users\magnu\OneDrive\AalborgDokumenter\GitHub\webpage\projects.html">projects</a>
             <a href="C:\Users\magnu\OneDrive\AalborgDokumenter\GitHub\webpage\contact.html">contact</a>
-            <div class="animation start-home"></div>
+            <div class="animation start-damsgaard"></div>
         </nav>
     </div>
+
+    <iframe class="dams" src="http://damsgaard.me/" title="Damsgaard.dk"></iframe>
+</div>
 
 </body>
 </html>
