skiftede til rigtig url

--- a/contact.html
+++ b/contact.html
@@ -15,10 +15,10 @@
 
     <div>
         <nav>
-            <a href="C:\Users\magnu\OneDrive\AalborgDokumenter\GitHub\webpage\index.html">home</a>
-            <a href="C:\Users\magnu\OneDrive\AalborgDokumenter\GitHub\webpage\github_page.html">github</a>
-            <a href="C:\Users\magnu\OneDrive\AalborgDokumenter\GitHub\webpage\damsgaard.html">damsgaard</a>
-            <a href="C:\Users\magnu\OneDrive\AalborgDokumenter\GitHub\webpage\projects.html">projects</a>
+            <a href="https://magn3054.github.io/webpage/index.html">home</a>
+            <a href="https://magn3054.github.io/webpage/github_page.html">github</a>
+            <a href="https://magn3054.github.io/webpage/damsgaard.html">damsgaard</a>
+            <a href="https://magn3054.github.io/webpage/projects.html">projects</a>
             <a href="#">contact</a>
             <div class="animation start-contact"></div>
         </nav>
