--- a/projects.html
+++ b/projects.html
@@ -16,11 +16,11 @@
 <input class="search">
 <div>
     <nav>
-        <a href="C:\Users\magnu\OneDrive\AalborgDokumenter\GitHub\webpage\index.html">home</a>
-        <a href="C:\Users\magnu\OneDrive\AalborgDokumenter\GitHub\webpage\github_page.html">github</a>
-        <a href="C:\Users\magnu\OneDrive\AalborgDokumenter\GitHub\webpage\damsgaard.html">damsgaard</a>
+        <a href="https://magn3054.github.io/webpage/index.html">home</a>
+        <a href="https://magn3054.github.io/webpage/github_page.html">github</a>
+        <a href="https://magn3054.github.io/webpage/damsgaard.html">damsgaard</a>
         <a href="#">projects</a>
-        <a href="C:\Users\magnu\OneDrive\AalborgDokumenter\GitHub\webpage\contact.html">contact</a>
+        <a href="https://magn3054.github.io/webpage/contact.html">contact</a>
         <div class="animation start-projects"></div>
     </nav>
 </div>
