--- a/damsgaard.html
+++ b/damsgaard.html
@@ -21,11 +21,11 @@
 
     <div>
         <nav>
-            <a href="C:\Users\magnu\OneDrive\AalborgDokumenter\GitHub\webpage\index.html">home</a>
-            <a href="C:\Users\magnu\OneDrive\AalborgDokumenter\GitHub\webpage\github_page.html">github</a>
+            <a href="https://magn3054.github.io/webpage/index.html">home</a>
+            <a href="https://magn3054.github.io/webpage/github_page.html">github</a>
             <a href="#">damsgaard</a>
-            <a href="C:\Users\magnu\OneDrive\AalborgDokumenter\GitHub\webpage\projects.html">projects</a>
-            <a href="C:\Users\magnu\OneDrive\AalborgDokumenter\GitHub\webpage\contact.html">contact</a>
+            <a href="https://magn3054.github.io/webpage/projects.html">projects</a>
+            <a href="https://magn3054.github.io/webpage/contact.html">contact</a>
             <div class="animation start-damsgaard"></div>
         </nav>
     </div>
