--- a/github_page.html
+++ b/github_page.html
@@ -32,11 +32,11 @@
 
     <div>
         <nav>
-            <a href="C:\Users\magnu\OneDrive\AalborgDokumenter\GitHub\webpage\index.html">home</a>
+            <a href="https://magn3054.github.io/webpage/index.html">home</a>
             <a href="#">github</a>
-            <a href="C:\Users\magnu\OneDrive\AalborgDokumenter\GitHub\webpage\damsgaard.html">damsgaard</a>
-            <a href="C:\Users\magnu\OneDrive\AalborgDokumenter\GitHub\webpage\projects.html">projects</a>
-            <a href="C:\Users\magnu\OneDrive\AalborgDokumenter\GitHub\webpage\contact.html">contact</a>
+            <a href="https://magn3054.github.io/webpage/damsgaard.html">damsgaard</a>
+            <a href="https://magn3054.github.io/webpage/projects.html">projects</a>
+            <a href="https://magn3054.github.io/webpage/contact.html">contact</a>
             <div class="animation start-github"></div>
         </nav>
     </div>
