--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
     <div>
         <nav>
             <a href="#">home</a>
-            <a href="C:\Users\magnu\OneDrive\AalborgDokumenter\GitHub\webpage\github_page.html">github</a>
-            <a href="C:\Users\magnu\OneDrive\AalborgDokumenter\GitHub\webpage\damsgaard.html">damsgaard</a>
-            <a href="C:\Users\magnu\OneDrive\AalborgDokumenter\GitHub\webpage\projects.html">projects</a>
-            <a href="C:\Users\magnu\OneDrive\AalborgDokumenter\GitHub\webpage\contact.html">contact</a>
+            <a href="https://magn3054.github.io/webpage/github_page.html">github</a>
+            <a href="https://magn3054.github.io/webpage/damsgaard.html">damsgaard</a>
+            <a href="https://magn3054.github.io/webpage/projects.html">projects</a>
+            <a href="https://magn3054.github.io/webpage/contact.html">contact</a>
             <div class="animation start-home"></div>
         </nav>
     </div>
