damsgaard virker ikke

--- a/damsgaard.html
+++ b/damsgaard.html
@@ -11,6 +11,14 @@
 
     <style>
         body {overflow: hidden;}
+
+        .dams {
+    width: 97.5vw;
+    height: 43.5vw;
+    margin-top: 10px;
+    margin-left: 0px;
+    border: none;
+}
     </style>
 
 </head>
