margin-top sat til 50vh

--- a/github_page.html
+++ b/github_page.html
@@ -14,7 +14,7 @@
             height: 375px;
             border: 10px solid #333; 
             margin: 0px auto;
-            margin-top: 20px auto;
+            margin-top: 50vh;
         }
 
         #videoElement{
