--- a/github_page.html
+++ b/github_page.html
@@ -14,7 +14,7 @@
             height: 375px;
             border: 10px solid #333; 
             margin: 0px auto;
-            margin-top: 50vh;
+            margin-top: 25vh;
         }
 
         #videoElement{
@@ -44,7 +44,7 @@
 
 
     <div class="container">
-        <video id="videoElement" autoplay="true" video()></video>
+        <video id="videoElement" autoplay="true" ></video>
     </div>
     
 
