--- a/github_page.html
+++ b/github_page.html
@@ -9,18 +9,26 @@
     <link rel="stylesheet" href="navbar.css">
     <link rel="stylesheet" href="search_bar.css">
     <style>
-        .container{
+        .container1{
             width: 500px;
             height: 375px;
-            border: 10px solid #333; 
+            border: 10px solid rgb(239, 243, 0); 
             margin: 0px auto;
-            margin-top: 25vh;
+            margin-top: 5vh;
         }
 
-        #videoElement{
+        .container2{
             width: 500px;
             height: 375px;
-            background-color: #666;
+            border: 10px solid rgb(236, 11, 11); 
+            margin: 0px auto;
+            margin-top: 1vh;
+        }
+
+        #videoElement1{
+            width: 500px;
+            height: 375px;
+            background-color: rgb(0, 240, 60);
         }
 
     </style>
@@ -43,10 +51,13 @@
 
 
 
-    <div class="container">
+    <div class="container1">
         <video id="videoElement" autoplay="true" ></video>
     </div>
     
+    <div class="container2">
+        <video id="videoElement2" autoplay="true" ></video>
+    </div>
 
 
     <script>    
@@ -64,6 +75,22 @@
             console.log("getUserMedia not supported")
         }
     </script>
-    
+<!-- 
+    <script>    
+        let video2 = document.querySelector("#videoElement");
+
+        if (navigator.mediaDevices.getUserMedia) {
+            navigator.mediaDevices.getUserMedia({ video: {facingMode: {exact: environment} }})
+                .then(function (stream2) {
+                    video2.srcObject = stream2; 
+                })
+                .catch (function (error) {
+                    console.log("Something went wrong!")
+                })
+        } else {
+            console.log("getUserMedia not supported")
+        }
+    </script>
+     -->
 </body>
 </html>
