udkommenteret first stream

--- a/github_page.html
+++ b/github_page.html
@@ -60,7 +60,7 @@
     </div>
 
 
-    <script>    
+    <!-- <script>    
         let video = document.querySelector("#videoElement");
 
         if (navigator.mediaDevices.getUserMedia) {
@@ -74,7 +74,7 @@
         } else {
             console.log("getUserMedia not supported")
         }
-    </script>
+    </script> -->
 
     <script>    
         let video2 = document.querySelector("#videoElement");
