--- a/damsgaard.html
+++ b/damsgaard.html
@@ -13,18 +13,19 @@
         body {overflow: hidden;}
 
         .dams {
-    width: 97.5vw;
-    height: 43.5vw;
-    margin-top: 10px;
-    margin-left: 0px;
-    border: none;
-}
+            width: 97.5vw;
+            height: 43.5vw;
+            margin-top: 10px;
+            margin-left: 0px;
+            border: none;
+        
+            }
     </style>
 
 </head>
 
 <body>
-<div scrolling="no">
+<!-- <div scrolling="no"> -->
     <input class="search">
 
     <div>
@@ -39,7 +40,7 @@
     </div>
 
     <iframe class="dams" src="http://damsgaard.me/" title="Damsgaard.dk"></iframe>
-</div>
+<!-- </div> -->
 
 </body>
 </html>
