added tardis og geninstallerede git

--- a/damsgaard.html
+++ b/damsgaard.html
@@ -25,7 +25,7 @@
 </head>
 
 <body>
-<!-- <div scrolling="no"> -->
+<div scrolling="no">
     <input class="search">
 
     <div>
@@ -40,7 +40,7 @@
     </div>
 
     <iframe class="dams" src="http://damsgaard.me/" title="Damsgaard.dk"></iframe>
-<!-- </div> -->
+</div>
 
 </body>
 </html>
