--- a/projects.html
+++ b/projects.html
@@ -26,15 +26,14 @@
 </div>
 
 <div class="all">
-    <div class='DDD'>
-        <iframe scrolling='no' frameborder='0' allowfullscreen='true' src='https://www.3dcontentcentral.com/external-site-embed.aspx?format=3D&catalogid=171&modelid=1896142&width=250&height=250&edraw=true' 
-        name='ComputerStand' id='ComputerStand' width='100%' height=100%></iframe>
+    <div class='DDD'>     
+        <iframe scrolling='no' frameborder='0' allowfullscreen='true' src='https://www.3dcontentcentral.com/external-site-embed.aspx?format=3D&catalogid=171&modelid=1898274&width=250&height=250&edraw=true' 
+        name='Tardis' id='Tardis' width='100%' height='100%'></iframe>
     </div>
     
     <div class="text">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum quis mauris posuere, dictum arcu id, congue magna. Praesent id nisi quam. Aliquam facilisis tincidunt consectetur. Vestibulum molestie euismod auctor. Aliquam non dapibus nibh. Nunc quis diam velit. Vivamus tellus ex, convallis ac leo sed, suscipit egestas mi. Nam aliquet eros vel dictum mattis. Aenean vel porta velit. Suspendisse orci ex, suscipit non libero sed, aliquam dapibus lorem. Curabitur eget ultricies sapien. Suspendisse potenti. Nullam pretium est vestibulum, sollicitudin diam quis, lacinia quam. Nunc hendrerit velit sit amet nisl posuere vehicula.    
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum quis mauris posuere, dictum arcu id, congue magna. Praesent id nisi quam. Aliquam facilisis tincidunt consectetur. Vestibulum molestie euismod auctor. Aliquam non dapibus nibh. Nunc quis diam velit. Vivamus tellus ex, convallis ac leo sed, suscipit egestas mi. Nam aliquet eros vel dictum mattis. Aenean vel porta velit. Suspendisse orci ex, suscipit non libero sed, aliquam dapibus lorem. Curabitur eget ultricies sapien. Suspendisse potenti. Nullam pretium est vestibulum, sollicitudin diam quis, lacinia quam. Nunc hendrerit velit sit amet nisl posuere vehicula.    
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum quis mauris posuere, dictum arcu id, congue magna. Praesent id nisi quam. Aliquam facilisis tincidunt consectetur. Vestibulum molestie euismod auctor. Aliquam non dapibus nibh. Nunc quis diam velit. Vivamus tellus ex, convallis ac leo sed, suscipit egestas mi. Nam aliquet eros vel dictum mattis. Aenean vel porta velit. Suspendisse orci ex, suscipit non libero sed, aliquam dapibus lorem. Curabitur eget ultricies sapien. Suspendisse potenti. Nullam pretium est vestibulum, sollicitudin diam quis, lacinia quam. Nunc hendrerit velit sit amet nisl posuere vehicula.    
+        I started watching Doctor Who and i always enjoy being creative while watching television. This design is made as one part as it was only meant for virtuel display. 
+        I have later redesigned the tardis as several parts which is meant to be 3D-printed and put together to have as a table display.      
     </div>
 </div>
 
@@ -45,7 +44,7 @@
     </div>
     
     <div class="text">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum quis mauris posuere, dictum arcu id, congue magna. Praesent id nisi quam. Aliquam facilisis tincidunt consectetur. Vestibulum molestie euismod auctor. Aliquam non dapibus nibh. Nunc quis diam velit. Vivamus tellus ex, convallis ac leo sed, suscipit egestas mi. Nam aliquet eros vel dictum mattis. Aenean vel porta velit. Suspendisse orci ex, suscipit non libero sed, aliquam dapibus lorem. Curabitur eget ultricies sapien. Suspendisse potenti. Nullam pretium est vestibulum, sollicitudin diam quis, lacinia quam. Nunc hendrerit velit sit amet nisl posuere vehicula.    
+        I made this stand to elevate my ASUS ROG GU502LW laptop, when working on it to retrieve a better airflow and get the monitor in a height similar to an external monitor.    
     </div>
 </div>
 
