--- a/CV.html
+++ b/CV.html
@@ -7,40 +7,26 @@
     <link rel="icon" class="svg" href="favicon.svg">
     <link rel="stylesheet" href="navbar.css">
     <link rel="stylesheet" href="search_bar.css">
-    <link rel="stylesheet" href="damsgaard.css">
-
-    <style>
-        body {overflow: hidden;}
-
-        .dams {
-            width: 97.5vw;
-            height: 43.5vw;
-            margin-top: 10px;
-            margin-left: 0px;
-            border: none;
-        
-            }
-    </style>
 
 </head>
 
 <body>
-<div scrolling="no">
+
     <input class="search">
 
     <div>
         <nav>
             <a href="https://magn3054.github.io/webpage/index.html">home</a>
             <a href="https://magn3054.github.io/webpage/github_page.html">github</a>
-            <a href="#">damsgaard</a>
+            <a href="#">CV</a>
             <a href="https://magn3054.github.io/webpage/projects.html">projects</a>
             <a href="https://magn3054.github.io/webpage/contact.html">contact</a>
-            <div class="animation start-damsgaard"></div>
+            <div class="animation start-CV"></div>
         </nav>
     </div>
 
-    <iframe class="dams" src="http://damsgaard.me/" title="Damsgaard.dk"></iframe>
-</div>
+    
+
 
 </body>
 </html>
