--- a/github_page.html
+++ b/github_page.html
@@ -34,7 +34,7 @@
         <nav>
             <a href="https://magn3054.github.io/webpage/index.html">home</a>
             <a href="#">github</a>
-            <a href="https://magn3054.github.io/webpage/damsgaard.html">damsgaard</a>
+            <a href="https://magn3054.github.io/webpage/CV.html">CV</a>
             <a href="https://magn3054.github.io/webpage/projects.html">projects</a>
             <a href="https://magn3054.github.io/webpage/contact.html">contact</a>
             <div class="animation start-github"></div>
