--- a/projects.html
+++ b/projects.html
@@ -18,7 +18,7 @@
     <nav>
         <a href="https://magn3054.github.io/webpage/index.html">home</a>
         <a href="https://magn3054.github.io/webpage/github_page.html">github</a>
-        <a href="https://magn3054.github.io/webpage/damsgaard.html">damsgaard</a>
+        <a href="https://magn3054.github.io/webpage/CV.html">CV</a>
         <a href="#">projects</a>
         <a href="https://magn3054.github.io/webpage/contact.html">contact</a>
         <div class="animation start-projects"></div>
