--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
         <nav>
             <a href="https://magn3054.github.io/webpage/index.html">home</a>
             <a href="https://magn3054.github.io/webpage/github_page.html">github</a>
-            <a href="https://magn3054.github.io/webpage/damsgaard.html">damsgaard</a>
+            <a href="https://magn3054.github.io/webpage/CV.html">CV</a>
             <a href="https://magn3054.github.io/webpage/projects.html">projects</a>
             <a href="#">contact</a>
             <div class="animation start-contact"></div>
