--- a/CV.html
+++ b/CV.html
@@ -2,12 +2,12 @@
 <html> 
 <head> 
     <title>
-        Magnus Damsgaard.dk
+        Magnus Damsgaard
     </title> 
-    <link rel="icon" class="svg" href="favicon.svg">
+    <link rel="website icon" class="png" href="favicon.svg">
     <link rel="stylesheet" href="navbar.css">
     <link rel="stylesheet" href="search_bar.css">
-
+    <link rel="stylesheet" href="cv.css">
 </head>
 
 <body>
@@ -25,8 +25,15 @@
         </nav>
     </div>
 
+    <a href="CVpdf.pdf" target="_blank">
+            <img class="cv-box" src="CVimg.jpg" alt="CV-PDF" > 
+    </a>
     
-
-
+    <div class="qr-box1">
+        <a href="https://linkedin.com/in/magnus-christiansen">
+            <img class="qr-box2" src="linkedInQR.svg" alt="LinkedIn QR-code">
+        </a>
+        <div class="clickme">Scan or click me!</div>
+    </div>
 </body>
 </html>
