container added to cv

--- a/test-page.html
+++ b/test-page.html
@@ -1,10 +1,39 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
+<!DOCTYPE html> 
+<html> 
+<head> 
+    <title>
+        Magnus Damsgaard
+    </title> 
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     
-    <title>Document</title>
-</head>
+    <link rel="website icon" class="png" href="favicon.svg">
+    <link rel="stylesheet" href="navbar.css">
+    <link rel="stylesheet" href="search_bar.css">
+    <link rel="stylesheet" href="test-css.css">
+    <style>
+      * {
+      box-sizing: border-box;
+      }
+    </style>
+
+  </head>
+
 <body>
-    
+
+<div class="row">   
+  <div class="container side" style="background-color: yellow;">
+    <p>green</p>
+  </div>
+
+  <div class="container mid" style="background-color: red;">
+    <p>mid container</p>
+  </div>
+
+  <div class="container side2" style="background-color: yellowgreen;">
+    <p>red</p>
+  </div>
+</div> 
+
 </body>
 </html>
