--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
     <title>
         Magnus Contact info
     </title> 
-    <link rel="website icon" class="png" href="favicon.svg">
+    <link rel="website icon" class="png" href="beard.svg">
     <link rel="stylesheet" href="navbar.css">
     <link rel="stylesheet" href="search_bar.css">
 </head>
