--- a/github_page.html
+++ b/github_page.html
@@ -5,7 +5,7 @@
         Magnus Github
     </title> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="website icon" class="png" href="favicon.svg">
+    <link rel="website icon" class="png" href="beard.svg">
     <link rel="stylesheet" href="navbar.css">
     <link rel="stylesheet" href="search_bar.css">
     <style>
