--- a/contact.html
+++ b/contact.html
@@ -1,28 +1,119 @@
 <!DOCTYPE html> 
 <html> 
-<head> 
+<head lang="en"> 
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>
-        Magnus Contact info
+        Magnus Definitions
     </title> 
-    <link rel="website icon" class="png" href="beard.svg">
-    <link rel="stylesheet" href="navbar.css">
-    <link rel="stylesheet" href="search_bar.css">
+    <link rel="website icon" class="png" href="img/beard.svg">
+    <link rel="stylesheet" href="css/navbar.css">
+    <link rel="stylesheet" href="css/search_bar.css">
+    <link rel="stylesheet" href="css/layout.css">
 </head>
 
 <body>
+    <header>
+        <input class="search">
 
-    <input class="search">
+        <div>
+            <nav>
+                <a href="https://magn3054.github.io/webpage/index.html">home</a>
+                <a href="https://magn3054.github.io/webpage/github_page.html">github</a>
+                <a href="https://magn3054.github.io/webpage/CV.html">contact</a>
+                <a href="https://magn3054.github.io/webpage/projects.html">projects</a>
+                <a href="#">definitions</a>
+                <div class="animation start-contact"></div>
+            </nav>
+        </div>
+    </header>
 
-    <div>
-        <nav>
-            <a href="https://magn3054.github.io/webpage/index.html">home</a>
-            <a href="https://magn3054.github.io/webpage/github_page.html">github</a>
-            <a href="https://magn3054.github.io/webpage/CV.html">CV</a>
-            <a href="https://magn3054.github.io/webpage/projects.html">projects</a>
-            <a href="#">contact</a>
-            <div class="animation start-contact"></div>
-        </nav>
-    </div>
+    <article class="semester1">
+        <section class="left one">
+            <h1><mark>Programming</mark></h1>
+            <dl>
+                <dt>HTML</dt>
+                <dd>HyperText Markup Language: The standard language for creating web pages.</dd>
 
+                <dt>CSS</dt>
+                <dd>Cascading Style Sheets: A stylesheet language used for describing the look and formatting of a document written in HTML.</dd>
+
+                <dt>JavaScript</dt>
+                <dd>A programming language commonly used in web development to add interactive features.</dd>
+            </dl>
+        </section>
+
+        <section class="mid one">
+            <h1><mark>UX</mark></h1>
+            <dl>
+                <dt>HTML</dt>
+                <dd>HyperText Markup Language: The standard language for creating web pages.</dd>
+
+                <dt>CSS</dt>
+                <dd>Cascading Style Sheets: A stylesheet language used for describing the look and formatting of a document written in HTML.</dd>
+
+                <dt>JavaScript</dt>
+                <dd>A programming language commonly used in web development to add interactive features.</dd>
+            </dl>
+        </section>
+
+        <section class="right one">
+            <h1><mark>Design</mark></h1>
+            <dl>
+                <dt>HTML</dt>
+                <dd>HyperText Markup Language: The standard language for creating web pages.</dd>
+
+                <dt>CSS</dt>
+                <dd>Cascading Style Sheets: A stylesheet language used for describing the look and formatting of a document written in HTML.</dd>
+
+                <dt>JavaScript</dt>
+                <dd>A programming language commonly used in web development to add interactive features.</dd>
+            </dl>
+        </section>
+    </article>
+
+    <article class="semester2"><h1></h1>
+        <section class="left one">
+            <h1><mark>Programmering</mark></h1>
+            <dl>
+                <dt>HTML</dt>
+                <dd>HyperText Markup Language: The standard language for creating web pages.</dd>
+
+                <dt>CSS</dt>
+                <dd>Cascading Style Sheets: A stylesheet language used for describing the look and formatting of a document written in HTML.</dd>
+
+                <dt>JavaScript</dt>
+                <dd>A programming language commonly used in web development to add interactive features.</dd>
+            </dl>
+        </section>
+
+        <section class="mid one">
+            <h1><mark>UX</mark></h1>
+            <dl>
+                <dt>HTML</dt>
+                <dd>HyperText Markup Language: The standard language for creating web pages.</dd>
+
+                <dt>CSS</dt>
+                <dd>Cascading Style Sheets: A stylesheet language used for describing the look and formatting of a document written in HTML.</dd>
+
+                <dt>JavaScript</dt>
+                <dd>A programming language commonly used in web development to add interactive features.</dd>
+            </dl>
+        </section>
+
+        <section class="right one">
+            <h1><mark>UX</mark></h1>
+            <dl>
+                <dt>HTML</dt>
+                <dd>HyperText Markup Language: The standard language for creating web pages.</dd>
+
+                <dt>CSS</dt>
+                <dd>Cascading Style Sheets: A stylesheet language used for describing the look and formatting of a document written in HTML.</dd>
+
+                <dt>JavaScript</dt>
+                <dd>A programming language commonly used in web development to add interactive features.</dd>
+            </dl>
+        </section>
+    </article>
 </body>
 </html>
