--- a/projects.html
+++ b/projects.html
@@ -1,29 +1,32 @@
 <!DOCTYPE html> 
 <html> 
-<head> 
+<head lang="en"> 
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>
         Magnus Projects
     </title> 
-    <link rel="website icon" class="png" href="beard.svg">
-    <link rel="stylesheet" href="navbar.css">
-    <link rel="stylesheet" href="search_bar.css">
-    <link rel="stylesheet" href="projects.css">
+    <link rel="website icon" class="png" href="img/beard.svg">
+    <link rel="stylesheet" href="css/navbar.css">
+    <link rel="stylesheet" href="css/search_bar.css">
+    <link rel="stylesheet" href="css/projects.css">
 
 </head>
 
 <body>
-
-<input class="search">
-<div>
-    <nav>
-        <a href="https://magn3054.github.io/webpage/index.html">home</a>
-        <a href="https://magn3054.github.io/webpage/github_page.html">github</a>
-        <a href="https://magn3054.github.io/webpage/CV.html">CV</a>
-        <a href="#">projects</a>
-        <a href="https://magn3054.github.io/webpage/contact.html">contact</a>
-        <div class="animation start-projects"></div>
-    </nav>
-</div>
+    <header>
+        <input class="search">
+        <div>
+            <nav>
+                <a href="https://magn3054.github.io/webpage/index.html">home</a>
+                <a href="https://magn3054.github.io/webpage/github_page.html">github</a>
+                <a href="https://magn3054.github.io/webpage/CV.html">contact</a>
+                <a href="#">projects</a>
+                <a href="https://magn3054.github.io/webpage/contact.html">definitions</a>
+                <div class="animation start-projects"></div>
+            </nav>
+        </div>
+    </header>
 
 <div class="all">
     <div class='DDD'>     
